[package]
name = "diffie_hellman_protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Abiodun Awoyemi <aabiodunawoyemi@gmail.com>"]
description = "This is the implementation of Diffie-Hellman Key Exchange Protocol over a modular exponentiation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.4", features = ['rand'] }
rand = "0.8.5"
